<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:contentPadding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="@string/maximum_monthly_spent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/please_set_maximum_spent_per_month_in_the_field_below"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_max_spent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:hint="@string/amount_rp"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_positive"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</androidx.cardview.widget.CardView>