<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPalette1"
    android:orientation="vertical"
    tools:context=".AddFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/colorWhite"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_income"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/income"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/rb_expense"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/expense"
            android:textColor="@color/radio_flat_text_selector" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/amount" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/description" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/date" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btn_positive"
            android:gravity="center"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_margin="16dp"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_negative"
            android:gravity="center"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>