<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPalette1"
    android:orientation="vertical"
    tools:context=".StatisticFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/colorWhite"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:title="@string/percentage_of_saving"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Spinner
        android:id="@+id/sp_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorWhite">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/saving"/>

            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:text="@string/income"/>

            <TextView
                android:id="@+id/txt_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:text="@string/expense"/>

            <TextView
                android:id="@+id/txt_expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorNegative"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>