<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPalette1"
    tools:context=".TransactionFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:titleTextColor="@color/colorWhite"
        app:title="@string/all_transaction"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/total_balance"/>

        <TextView
            android:id="@+id/txt_total_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            tools:text="Rp 500.000"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/sp_date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="160dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/balance"/>

            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:text="@string/income"/>

            <TextView
                android:id="@+id/txt_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorTextBrown"
                android:textSize="14sp"
                android:text="@string/expense"/>

            <TextView
                android:id="@+id/txt_expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorNegative"
                android:textSize="14sp"
                android:textAlignment="textEnd"
                android:text="@string/rp_0"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="258dp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</FrameLayout>